// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isSelected renders true when specified 1`] = `
<tr
  class="kuiTableRow kuiTableRow-isSelected"
>
  <td
    class="kuiTableRowCell"
  >
    <div
      class="kuiTableRowCell__content"
    />
  </td>
</tr>
`;

exports[`renders KuiTableRow 1`] = `
<tr
  aria-label="aria-label"
  class="kuiTableRow testClass1 testClass2"
  data-test-subj="test subject string"
>
  <td
    class="kuiTableRowCell"
  >
    <div
      class="kuiTableRowCell__content"
    >
      hi
    </div>
  </td>
</tr>
`;
